[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://Asset/Sprites/GridGrounds.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="Tile" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 2

[connection signal="area_entered" from="." to="." method="_on_Tile_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Tile_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
